@@ -1,6 +1,6 @@
 #!/usr/bin/env python
 # -*- coding: iso-8859-15 -*-
-# generated by wxGlade 0.6.3 on Sun Nov 09 10:11:06 2008
+# generated by wxGlade 0.6.3 on Fri Mar  6 19:06:49 2009
 
 import wx
 
@@ -19,16 +19,22 @@ class frame_mainFrame_parent(wx.Frame):
         self.window_2 = wx.SplitterWindow(self.window_1_pane_2, -1, style=wx.SP_3D|wx.SP_BORDER)
         self.window_2_pane_1 = wx.Panel(self.window_2, -1)
         self.window_1_pane_1 = wx.Panel(self.window_1, -1)
-        self.tree_ctrl_1 = wx.TreeCtrl(self.window_1_pane_1, -1, style=wx.TR_HAS_BUTTONS|wx.TR_DEFAULT_STYLE|wx.SUNKEN_BORDER)
-        self.panel_1 = wx.Panel(self.window_1_pane_1, -1)
-        self.gDrawPanel = wx.Panel(self.window_2_pane_1, -1)
-        self.window_2_pane_2 = wx.Panel(self.window_2, -1)
         
         # Menu Bar
         self.mainFrame_menubar = wx.MenuBar()
+        wxglade_tmp_menu = wx.Menu()
+        self.mainFrame_menubar.Append(wxglade_tmp_menu, "File")
+        wxglade_tmp_menu = wx.Menu()
+        self.mainFrame_menubar.Append(wxglade_tmp_menu, "Edit")
+        wxglade_tmp_menu = wx.Menu()
+        self.mainFrame_menubar.Append(wxglade_tmp_menu, "Help")
         self.SetMenuBar(self.mainFrame_menubar)
         # Menu Bar end
         self.mainFrame_statusbar = self.CreateStatusBar(1, 0)
+        self.tree_ctrl_1 = wx.TreeCtrl(self.window_1_pane_1, -1, style=wx.TR_HAS_BUTTONS|wx.TR_NO_LINES|wx.TR_DEFAULT_STYLE|wx.SUNKEN_BORDER)
+        self.panel_1 = wx.Panel(self.window_1_pane_1, -1)
+        self.gDrawPanel = wx.Panel(self.window_2_pane_1, -1, style=wx.TAB_TRAVERSAL|wx.FULL_REPAINT_ON_RESIZE)
+        self.window_2_pane_2 = wx.Panel(self.window_2, -1)
 
         self.__set_properties()
         self.__do_layout()
@@ -48,13 +54,13 @@ class frame_mainFrame_parent(wx.Frame):
         # begin wxGlade: frame_mainFrame_parent.__do_layout
         sizer_1 = wx.BoxSizer(wx.VERTICAL)
         sizer_2 = wx.BoxSizer(wx.HORIZONTAL)
-        genomePanelSizer = wx.BoxSizer(wx.HORIZONTAL)
+        gDrawPanelSizer = wx.BoxSizer(wx.HORIZONTAL)
         sizer_3 = wx.BoxSizer(wx.VERTICAL)
         sizer_3.Add(self.tree_ctrl_1, 3, wx.EXPAND, 0)
         sizer_3.Add(self.panel_1, 1, wx.EXPAND, 0)
         self.window_1_pane_1.SetSizer(sizer_3)
-        genomePanelSizer.Add(self.gDrawPanel, 2, wx.EXPAND, 0)
-        self.window_2_pane_1.SetSizer(genomePanelSizer)
+        gDrawPanelSizer.Add(self.gDrawPanel, 1, wx.EXPAND, 0)
+        self.window_2_pane_1.SetSizer(gDrawPanelSizer)
         self.window_2.SplitHorizontally(self.window_2_pane_1, self.window_2_pane_2)
         sizer_2.Add(self.window_2, 1, wx.EXPAND, 0)
         self.window_1_pane_2.SetSizer(sizer_2)
@@ -68,26 +74,10 @@ class frame_mainFrame_parent(wx.Frame):
 # end of class frame_mainFrame_parent
 
 
-class frame_mainFrame(wx.Frame):
-    def __init__(self, *args, **kwds):
-        # content of this block not found: did you rename this class?
-        pass
-
-    def __set_properties(self):
-        # content of this block not found: did you rename this class?
-        pass
-
-    def __do_layout(self):
-        # content of this block not found: did you rename this class?
-        pass
-
-# end of class frame_mainFrame
-
-
 if __name__ == "__main__":
     chipFishApp = wx.PySimpleApp(0)
     wx.InitAllImageHandlers()
-    mainFrame_parent = frame_mainFrame(None, -1, "")
-    chipFishApp.SetTopWindow(mainFrame_parent)
-    mainFrame_parent.Show()
+    mainFrame = frame_mainFrame_parent(None, -1, "")
+    chipFishApp.SetTopWindow(mainFrame)
+    mainFrame.Show()
     chipFishApp.MainLoop()
