@@ -1,12 +1,27 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.6.3 on Sun Nov 09 10:15:03 2008 -->
+<!-- generated by wxGlade 0.6.3 on Fri Mar  6 19:06:48 2009 -->
 
-<application path="I:\BioBox\chipFish\guiWxParent.py" name="chipFishApp" class="" option="0" language="python" top_window="mainFrame" encoding="ISO-8859-15" use_gettext="0" overwrite="0" use_new_namespace="1" for_version="2.8" is_template="0">
+<application path="/home/hutchinsa/BioBox/chipfish/guiWxParent.py" name="chipFishApp" class="" option="0" language="python" top_window="mainFrame" encoding="ISO-8859-15" use_gettext="0" overwrite="1" use_new_namespace="1" for_version="2.8" is_template="0">
     <object class="frame_mainFrame_parent" name="mainFrame" base="EditFrame">
         <style>wxDEFAULT_FRAME_STYLE</style>
         <title>frame_1</title>
         <menubar>1</menubar>
         <statusbar>1</statusbar>
+        <object class="wxMenuBar" name="mainFrame_menubar" base="EditMenuBar">
+            <menus>
+                <menu name="" itemid="100" label="File">
+                </menu>
+                <menu name="" itemid="200" label="Edit">
+                </menu>
+                <menu name="" itemid="300" label="Help">
+                </menu>
+            </menus>
+        </object>
+        <object class="wxStatusBar" name="mainFrame_statusbar" base="EditStatusBar">
+            <fields>
+                <field width="-1">mainFrame_statusbar</field>
+            </fields>
+        </object>
         <object class="wxBoxSizer" name="sizer_1" base="EditBoxSizer">
             <orient>wxVERTICAL</orient>
             <object class="sizeritem">
@@ -27,7 +42,7 @@
                                 <border>0</border>
                                 <option>3</option>
                                 <object class="wxTreeCtrl" name="tree_ctrl_1" base="EditTreeCtrl">
-                                    <style>wxTR_HAS_BUTTONS|wxTR_DEFAULT_STYLE|wxSUNKEN_BORDER</style>
+                                    <style>wxTR_HAS_BUTTONS|wxTR_NO_LINES|wxTR_DEFAULT_STYLE|wxSUNKEN_BORDER</style>
                                 </object>
                             </object>
                             <object class="sizeritem">
@@ -55,14 +70,14 @@
                                     <window_1>window_2_pane_1</window_1>
                                     <object class="wxPanel" name="window_2_pane_1" base="EditPanel">
                                         <style>wxTAB_TRAVERSAL</style>
-                                        <object class="wxBoxSizer" name="genomePanelSizer" base="EditBoxSizer">
+                                        <object class="wxBoxSizer" name="gDrawPanelSizer" base="EditBoxSizer">
                                             <orient>wxHORIZONTAL</orient>
                                             <object class="sizeritem">
                                                 <flag>wxEXPAND</flag>
                                                 <border>0</border>
-                                                <option>2</option>
+                                                <option>1</option>
                                                 <object class="wxPanel" name="gDrawPanel" base="EditPanel">
-                                                    <style>wxTAB_TRAVERSAL</style>
+                                                    <style>wxTAB_TRAVERSAL|wxFULL_REPAINT_ON_RESIZE</style>
                                                 </object>
                                             </object>
                                         </object>
@@ -76,15 +91,6 @@
                     </object>
                 </object>
             </object>
-        </object>
-        <object class="wxMenuBar" name="mainFrame_menubar" base="EditMenuBar">
-            <menus>
-            </menus>
-        </object>
-        <object class="wxStatusBar" name="mainFrame_statusbar" base="EditStatusBar">
-            <fields>
-                <field width="-1">mainFrame_statusbar</field>
-            </fields>
         </object>
     </object>
 </application>
